--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "remark-html": "13.0.1"
   },
   "devDependencies": {
+    "@types/node": "^14.14.41",
+    "@types/react": "^17.0.3",
     "autoprefixer": "^10.2.1",
     "postcss": "^8.2.4",
-    "tailwindcss": "^2.0.2"
+    "tailwindcss": "^2.0.2",
+    "typescript": "^4.2.4"
   },
   "license": "MIT"
 }
