--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "classnames": "2.2.6",
     "date-fns": "2.16.1",
+    "dotenv": "^8.2.0",
     "gray-matter": "4.0.2",
     "next": "latest",
     "react": "^17.0.1",
