--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-tinacms-strapi": "^0.39.0",
     "remark": "13.0.0",
-    "remark-html": "13.0.1"
+    "remark-html": "13.0.1",
+    "styled-components": "^5.2.3",
+    "tinacms": "^0.39.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.41",
