--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-markdown": "^6.0.0",
+    "react-tinacms-editor": "^0.39.0",
+    "react-tinacms-inline": "^0.39.0",
     "react-tinacms-strapi": "^0.39.0",
     "remark": "13.0.0",
     "remark-html": "13.0.1",
